--- a/source/familyAccount/package.json
+++ b/source/familyAccount/package.json
@@ -14,6 +14,10 @@
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "es6-promise": "^4.2.5",
+    "gulp": "^4.0.0",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-replace": "^1.0.0",
     "vue": "^2.5.2"
   },
   "devDependencies": {
