--- a/source/appointmentSuccess/package.json
+++ b/source/appointmentSuccess/package.json
@@ -13,8 +13,6 @@
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
     "es6-promise": "^4.2.8",
-    "lib-flexible": "^0.3.2",
-    "px2rem-loader": "^0.1.9",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4"
   },
@@ -41,12 +39,14 @@
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
+    "postcss-pxtorem": "^4.0.1",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "vant": "^2.0.9",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
