--- a/source/exchangeGuide/package.json
+++ b/source/exchangeGuide/package.json
@@ -13,7 +13,8 @@
     "babel-polyfill": "^6.26.0",
     "es6-promise": "^4.2.8",
     "lib-flexible": "^0.3.2",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vue-video-player": "^5.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
