--- a/source/ridingLeaderboard/package.json
+++ b/source/ridingLeaderboard/package.json
@@ -16,8 +16,10 @@
     "es6-promise": "^4.2.8",
     "lib-flexible": "^0.3.2",
     "vant": "^2.1.2",
+    "vconsole": "^3.3.4",
     "vue": "^2.5.2",
-    "vue-axios": "^2.1.4"
+    "vue-axios": "^2.1.4",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
